Added search function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>hello</div>
+    <div class="name"></div>
+    <div class="weather-type"></div>
+    <div class="temp"></div>
+    <div class="feelslike"></div>
+    <div class="search-container">
+        <label for="search">
+            <input type="text" id="search" placeholder="City name..">
+            <button type="button" id="btn">Search</button>
+        </label>
+    </div>
     <script src="/app.js"></script>
+    <script src="https://kit.fontawesome.com/62e204e4f8.js" crossorigin="anonymous"></script>
 </body>
 </html>
